tests/generics/generic_struct_without_keyword.out
Error in ..\tests\generics\generic_struct_without_keyword.sld:3:12: Unknown type $Type found. It seems like you want to use a generic type. Add it in <brackets>.
